--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
 
 [features]
 builder = ["byteorder", "bitcoin"]
+decode = ["bitcoin"]
 
 [dependencies]
 bitcoin = { version = "0.13", optional = true }
@@ -13,6 +14,6 @@ byteorder = { version = "1", optional = true }
 bitstream-io = "0.6"
 siphasher = "0.2"
 
-
 [dev-dependencies]
 serde_json = "1"
+hex = "0.3"
